<resources>
    <string name="microsoft_azure_key">c849558987be458791c068a2cb1707e0</string>
    <!--<string name="microsoft_azure_key">2872126420d2486c94f9b51cc6789a28</string>-->
    <string name="microsoft_azure_local">en-US</string>

    <string name="app_name">Reach Voice</string>
    <string name="add_user">Add User</string>
    <string name="identify">Identify</string>
    <string name="list_users">List Users</string>
    <string name="page_list">Users</string>
    <string name="page_add_user">Add User</string>
    <string name="add_user_desc">Adding a new user is as easy as 1 2 3...</string>
    <string name="enter_name">Enter User Name</string>
    <string name="hint_name">Name</string>
    <string name="choose_phrase">Choose Phrase</string>
    <string name="record_audio">Record Audio</string>
    <string name="record_desc">Please push the button and read the following:</string>
    <string name="add">add</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="still_loading">Still Loading...</string>
    <string name="page_identify">Identify</string>
    <string name="yoWeNeedPermissionToRecord">Yo man, we need permission to record. Please grant the permission NOW</string>
    <string name="heyYouDeniedPermissions">Hey man, you denied all permissions. Oh well, your loss.</string>
</resources>
