<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="za.co.inventit.reachvoice.MainActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:src="@drawable/reachvoice_logo"/>

    <TextView
        android:id="@+id/button_identify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@color/colorAccent"
        android:textColor="@color/text_white"
        android:padding="8dp"
        android:textSize="20sp"
        android:textAllCaps="true"
        android:text="@string/identify" />

    <TextView
        android:id="@+id/button_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@color/colorAccent"
        android:textColor="@color/text_white"
        android:padding="8dp"
        android:textSize="20sp"
        android:textAllCaps="true"
        android:text="@string/add_user" />

    <TextView
        android:id="@+id/button_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@color/colorAccent"
        android:textColor="@color/text_white"
        android:padding="8dp"
        android:textSize="20sp"
        android:textAllCaps="true"
        android:text="@string/list_users" />

</LinearLayout>
