<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="za.co.inventit.reachvoice.AddUserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:text="@string/add_user_desc"
            android:textSize="16sp"/>

        <!-- name -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="20dp"
            android:background="@drawable/step_background">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_gravity="left"
                    android:gravity="center"
                    android:background="@drawable/step_circle"
                    android:textColor="@color/text_white"
                    android:includeFontPadding="false"
                    android:textSize="32sp"
                    android:padding="5dp"
                    android:text="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginLeft="20dp"
                    android:text="@string/enter_name"
                    android:textSize="20sp"
                    android:textColor="@color/text_white"/>

            </LinearLayout>

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/text_white"
                android:textColorHint="#CCCCCC"
                android:textSize="20sp"
                android:hint="@string/hint_name"/>

        </LinearLayout>

        <!-- phrase -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="20dp"
            android:background="@drawable/step_background">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_gravity="left"
                    android:gravity="center"
                    android:background="@drawable/step_circle"
                    android:textColor="@color/text_white"
                    android:includeFontPadding="false"
                    android:textSize="32sp"
                    android:padding="5dp"
                    android:text="2"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginLeft="20dp"
                    android:text="@string/choose_phrase"
                    android:textSize="20sp"
                    android:textColor="@color/text_white"/>

            </LinearLayout>

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <!-- record voice -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="20dp"
            android:background="@drawable/step_background">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_gravity="left"
                    android:gravity="center"
                    android:background="@drawable/step_circle"
                    android:textColor="@color/text_white"
                    android:includeFontPadding="false"
                    android:textSize="32sp"
                    android:padding="5dp"
                    android:text="3"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginLeft="20dp"
                    android:text="@string/record_audio"
                    android:textSize="20sp"
                    android:textColor="@color/text_white"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="left"
                android:layout_margin="5dp"
                android:textColor="@color/text_white"
                android:textSize="16sp"
                android:text="@string/record_desc"/>

            <TextView
                android:id="@+id/phrase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_margin="20dp"
                android:textStyle="italic"
                android:textColor="@color/text_white"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/record"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:src="@drawable/record_audio2" />

        </LinearLayout>

        <TextView
            android:id="@+id/add"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/add"
            android:textSize="20sp"
            android:background="@color/colorAccent"
            android:textColor="@color/text_white"
            android:textAllCaps="true"/>

    </LinearLayout>
</ScrollView>